<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PET App</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="nome_perfil"></string>
    <string name="nick_perfil"></string>
    <string name="universidade_perfil"></string>
    <string name="curso_perfil"></string>
    <string name="nascimento_perfil"></string>
    <string name="pet_perfil"></string>
    <string name="email_perfil"></string>

    <string name="nome_pet"></string>
    <string name="site_pet"></string>
    <string name="universidade_pet"></string>
    <string name="cursos_pet"></string>
    <string name="ano_pet"></string>
    <string name="localizacao_pet"></string>
    <string name="email_pet"></string>

    <string name="proximo">Próximo</string>
    <string name="error_weak_password">Senha fraca</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_user_exists">Email já cadastrado</string>

    <string-array name="opcoes_petiano">
        <item>Bolsista</item>
        <item>Voluntario Oficial</item>
        <item>Extra Oficial</item>
        <item>Egresso</item>
        <item>Tutor</item>
    </string-array>

    <string-array name="opcoes_membros">
        <item>Tornar Coordenador</item>
        <item>Remover</item>
    </string-array>

    <string-array name="tem_certeza">
        <item>Sim</item>
        <item>Não</item>
    </string-array>

    <string-array name="opcoes_tarefa">
        <item>Fazer</item>
        <item>Fazendo</item>
        <item>Feito</item>
    </string-array>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <string-array name="estados">
        <item name="estado">Estado</item>
        <item name="acre">Acre</item>
        <item name="alagoas">Alagoas</item>
        <item name="amapa">Amapá</item>
        <item name="amazonas">Amazonas</item>
        <item name="bahia">Bahia</item>
        <item name="ceara">Ceará</item>
        <item name="distrito_federal">Distrito Federal</item>
        <item name="espirito_santo">Espirito Santo</item>
        <item name="goias">Goiás</item>
        <item name="maranhao">Maranhão</item>
        <item name="mato_grosso">Mato Grosso</item>
        <item name="mato_grosso_do_sul">Mato Grosso do Sul</item>
        <item name="minas_gerais">Minas Gerais</item>
        <item name="para">Para</item>
        <item name="paraiba">Paraíba</item>
        <item name="paraná">Paraná</item>
        <item name="pernambuco">Pernambuco</item>
        <item name="piaui">Piauí</item>
        <item name="rio_de_janeiro">Rio de Janeiro</item>
        <item name="rio_grande_do_norte">Rio Grande do Norte</item>
        <item name="rio_grande do_sul">Rio Grande do Sul</item>
        <item name="rondonia">Rondônia</item>
        <item name="roraima">Roraima</item>
        <item name="santa_catarina">Santa Catarina</item>
        <item name="sao_paulo">São Paulo</item>
        <item name="sergipe">Sergipe</item>
        <item name="tocantins">Tocantins</item>
    </string-array>

    <string-array name="condicao">
        <item name="condicao">Sua condição no PET</item>
        <item name="bolsista">Bolsista</item>
        <item name="oficial">Voluntário Oficial</item>
        <item name="voluntario">Voluntário Extraoficial</item>
    </string-array>

    <string-array name="horarios">
        <item name="horario1">08:00&#8211;09:00</item>
        <item name="horario2">09:00&#8211;10:00</item>
        <item name="horario3">10:00&#8211;11:00</item>
        <item name="horario4">11:00&#8211;12:00</item>
        <item name="horario5">12:00&#8211;13:00</item>
        <item name="horario6">13:00&#8211;14:00</item>
        <item name="horario7">14:00&#8211;15:00</item>
        <item name="horario8">15:00&#8211;16:00</item>
        <item name="horario9">16:00&#8211;17:00</item>
        <item name="horario10">17:00&#8211;18:00</item>
        <item name="horario11">18:00&#8211;19:00</item>
        <item name="horario12">19:00&#8211;20:00</item>
        <item name="horario13">20:00&#8211;21:00</item>
        <item name="horario14">21:00&#8211;22:00</item>
        <item name="horario15">22:00&#8211;23:00</item>
    </string-array>

    <string-array name="dias">
        <item name="segunda">SEGUNDA</item>
        <item name="terca">TERÇA</item>
        <item name="quarta">QUARTA</item>
        <item name="quinta">QUINTA</item>
        <item name="sexta">SEXTA</item>
        <item name="sabado">SÁBADO</item>
        <item name="domingo">DOMINGO</item>
    </string-array>

    <string name="crop">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="ok">OK</string>

    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Entrar</string>
    <string name="create_account">Inscrever-se</string>
    <string name="adicionar_pet">Adicionar PET</string>
    <string name="adicionar_projeto">Adicionar Projeto</string>
    <string name="adiciona_universidade">Adicionar Universidade</string>
    <string name="adiciona_equipe">Adicionar Equipe</string>
    <string name="adiciona_imagem">Adicionar Imagem</string>
    <string name="adiciona_curso">Adicionar Curso</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>

    <string name="titulo_color_picker">Selecione a cor</string>

    <string name="hint_user_id">User ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_pesquisa">Pesquisar</string>
    <string name="hint_universidade">Universidade</string>
    <string name="hint_condicao">Sua condição no PET</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_curso">Curso</string>
    <string name="hint_nick">Apelido</string>
    <string name="hint_nascimento">Nascimento</string>
    <string name="hint_sigla">Sigla</string>
    <string name="hint_ano">Ano de surgimento</string>
    <string name="hint_integrantes">Número de petianos</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_site">Site</string>
    <string name="hint_drive">Endereço Google Drive</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="pessoal">Pessoal</string>
    <string name="grupo">Grupo</string>
    <string name="perfil">Perfil</string>
    <string name="sair">Sair</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Sair</string>

    <string-array name="universidades_array">
        <item>UFJF</item>
        <item>Outra</item>
    </string-array>
    <string-array name="cursos_array">
        <item>Engenharia Elétrica</item>
        <item>Engenharia Civil</item>
        <item>Engenharia de Produção</item>
        <item>Engenharia Ambiental e Sanitária</item>
        <item>Engenharia Mecânica</item>
        <item>Engenharia Computacional</item>
    </string-array>

    <string name="base_universidades">Base Universidades</string>
    <string name="base_cursos">BaseCursos</string>
    <string name="base_usuarios">Usuarios</string>

    <string name="uri_perfil"></string>
    <string name="uri_pet"></string>
</resources>
