<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/dados_usuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/pet_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/field_nome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_nick"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nick"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/universidade_spinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:spinnerMode="dialog"
                android:hint="@string/hint_universidade"/>

            <Spinner
                android:id="@+id/curso_spinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:spinnerMode="dialog"
                android:hint="@string/hint_curso" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/field_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
                <ImageView
                    android:id="@+id/mostra_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_visibility"
                    android:clickable="true"
                    android:layout_alignRight="@id/field_password" />

            </RelativeLayout>

            <magosoftware.petprojetos.EditTextEnd
                android:id="@+id/field_nascimento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nascimento"
                android:inputType="date" />

            <Button
                android:id="@+id/criar_conta"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/proximo"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>