<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/dados_usuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:background="@drawable/pet_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"/>

            <EditText
                android:id="@+id/field_nome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:inputType="textPersonName" />

            <com.pchmn.materialchips.ChipsInput
                android:id="@+id/chips_cursos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chip_backgroundColor="@color/white_transparency"
                app:chip_hasAvatarIcon="false"
                app:showChipDetailed="false"
                app:chip_deletable="true"
                app:chip_detailed_backgroundColor="#1ba1e2"
                app:hint="Cursos"
                app:maxRows="3" />

            <EditText
                android:id="@+id/field_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_site"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_site"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/universidade_spinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:spinnerMode="dialog"
                android:hint="@string/hint_universidade"/>

            <Spinner
                android:id="@+id/estado_spinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:spinnerMode="dialog"
                android:hint="@string/hint_estado"/>

            <EditText
                android:id="@+id/field_cidade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cidade"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_ano"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ano"
                android:inputType= "number" />

            <Spinner
                android:id="@+id/condicao_spinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:spinnerMode="dialog"
                android:hint="@string/hint_universidade"/>

            <Button
                android:id="@+id/adicionar_pet"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/adicionar_pet"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>