<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="3.0">

    <RelativeLayout
        android:id="@+id/logout_area"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <Button
                android:id="@+id/pessoal_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1.0"
                android:visibility="visible"
                android:text="@string/pessoal" />
            <Button
                android:id="@+id/grupo_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1.0"
                android:visibility="visible"
                android:text="@string/grupo" />
            <Button
                android:id="@+id/perfil_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1.0"
                android:visibility="visible"
                android:text="@string/perfil" />
            <Button
                android:id="@+id/sair_button"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1.0"
                android:visibility="visible"
                android:text="@string/sair" />
            <!--<ImageButton-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:background="@drawable/round_button"-->
            <!--android:src="@drawable/ninosca"-->
            <!--android:scaleType="centerInside"-->
            <!--android:adjustViewBounds="true" />-->
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>